Testing a flex layout with the plugin. This fixes the issue where if the category discussion list item is too big, the category label container does not change height accordingly. Now the category label container is always as large as possible within the list item

--- a/plugins/DiscussionCategoryStyleExtended/design/pluginFunctionsDiscussions.css
+++ b/plugins/DiscussionCategoryStyleExtended/design/pluginFunctionsDiscussions.css
@@ -1,3 +1,36 @@
+/* Begin Flexbox test */
+/* Using (https://css-tricks.com/snippets/css/a-guide-to-flexbox/) as reference */
+ul.DataList.Discussions > li
+{
+    padding: 0;
+    position: relative;
+    display: flex;
+}
+ul.DataList.Discussions > li > a.IndexPhoto.PhotoWrap
+{
+    padding-top: 8px;
+    padding-left: 8px;
+}
+ul.DataList.Discussions > li > span.Options
+{
+    padding-top: 6px;
+    order: 10;
+    align-self: flex-start;
+    min-width: 48px;
+    flex-wrap: nowrap;
+}
+
+ul.DataList.Discussions > li > div.ItemContent.Discussion
+{
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 8px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+/* End flexbox test */
+
 span.MItem.Category
 {
     display: none
@@ -7,17 +40,30 @@ div.CategoryLabelContainer
 {
 	float: left;
 	display: flex;
-	height: 64px;
+    
+    /* Removed as part of flexbox test*/
+    /*
+    height: 64px;
 	min-height: 64px;
 	width: 64px;
-	margin-top:  -10px;
+	
+    margin-top:  -10px;
 	margin-left: -15px;
 	margin-right: 10px;
 	margin-bottom: -15px;
-    /* padding-left: inherit;
-	padding-right: inherit; */
+    */
+    
+    /* Added as part of flexbox test */
+    width: 64px;
+    min-height: 64px;
 	padding-top: inherit;
 	padding-bottom: inherit;
+    margin: 0;
+    
+    /* Add the following to see the flex box change seperate from the plugin. */
+    /* display: none; */
+    
+    /* End of flexbox test */
     
 }
 a.CategoryLabel
